--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.inputsystem": "1.0.2",
     "com.unity.postprocessing": "2.3.0",
     "com.unity.render-pipelines.high-definition": "8.2.0",
+    "com.unity.render-pipelines.high-definition-config": "file:../LocalPackages/com.unity.render-pipelines.high-definition-config",
     "com.unity.test-framework": "1.1.16",
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.3.6",
